--- a/TODO.html
+++ b/TODO.html
@@ -531,15 +531,15 @@ summary {
 </tr>
 </tbody>
 </table>
-<p>===</p>
 </div>
 <div id="questions-to-answer" class="section level1">
 <h1>Questions to answer:</h1>
 <ul>
-<li>Difference between <em>abate</em> &amp; <em>attenuate</em> → abate can weaken to the point of disappearing, attenuate has to be always present.</li>
-<li>Difference between <em>castigate</em> &amp; <em>chastize</em></li>
-<li>Are <em>fervid</em> &amp; <em>fervent</em> the same word?</li>
-<li>Connotation of <em>facetious</em></li>
+<li><p>Difference between <em>abate</em> &amp; <em>attenuate</em></p>
+<p>→ abate can weaken to the point of disappearing, attenuate has to be always present.</p></li>
+<li><p>Difference between <em>castigate</em> &amp; <em>chastize</em></p></li>
+<li><p>Are <em>fervid</em> &amp; <em>fervent</em> the same word?</p></li>
+<li><p>Connotation of <em>facetious</em></p></li>
 </ul>
 </div>
 
